Make sure we don't hide scrollbar

--- a/chrome/content/cssedit/css/master.css
+++ b/chrome/content/cssedit/css/master.css
@@ -9,22 +9,35 @@ body{
 	font-size:12px;
 	color:#000;
 }
+
+.wrap{
+	z-index: 0;
+	position: relative;
+}
+
 #header{
 	position:fixed;
 	top:0;
-	left:0;
     padding:10px 1%;
 	background:#fff;
 	width:98%;
 	box-shadow:0 0 5px rgba(0, 0, 0, 0.2);
+	z-index: -1;
 }
+
+#header a:first-of-type{
+	margin-right: 15px;
+}
+
 fieldset{
 	border:0;
 }
-#stylesheet{
+.stylesheets{
 	font-family:monospace;
 	margin-top:40px;
     padding:10px;
+	position: relative;
+	z-index: -2;
 }
 .dec .properties{
 	margin:5px 0 5px 10px;
